welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:19: error: Unit does not take parameters
dogHouse(); 
        ^MethodsDogHouse:25: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:31: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:41: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:51: error: Unit does not take parameters
		dogHouse();		
                        ^